# opengl-learning

./: CMakeLists.txt  README.md  simOptions.json
CMakeModules/: FindGLFW3.cmake  FindGLM.cmake
demos/: 2024-10-14_demo.mov
includes/custom/: fileManager.hpp
includes/custom/graphics/: camera.hpp  shader.hpp  textRenderer.hpp
includes/custom/model/: mesh.hpp  model.hpp
includes/custom/physics/: engine.hpp  math.hpp  object.hpp
includes/custom/state/: gameOptions.hpp  gameState.hpp
includes/glad/: glad.h
includes/swivel_chair/: fileManager.h  options.h  state.h
includes/swivel_chair/graphics/: camera.h  shader.h  textRenderer.h
includes/swivel_chair/model/: mesh.h  model.h
includes/swivel_chair/phys/: physEngine.h  physMath.h  physObject.h
resources/scenes/: scene0.json  scene1.json  scene2.json
resources/sphere/: sphere.mtl
src/: Instance.cpp  glad.c  main.cpp  simple.fs  simple.vs
src/custom/graphics/: camera.cpp  shader.cpp  textRenderer.cpp
src/custom/model/: mesh.cpp  model.cpp
src/custom/physics/: engine.cpp  math.cpp  object.cpp
